Corrections made to blueprints and Swagger
