# routes/orderBP.py
@@ -1,5 +1,5 @@
 from flask import Blueprint
-from controllers.orderController import find_by_email, find_by_customer_id, find_by_id, save, find_all
+from controllers.orderController import find_by_id, save, find_all
 
 
 order_blueprint = Blueprint('order_bp', __name__)
@@ -9,5 +9,5 @@ order_blueprint = Blueprint('order_bp', __name__)
 order_blueprint.route('/', methods=['POST'])(save) #triggers the save function on POST request to /customers
 order_blueprint.route('/', methods=['GET'])(find_all)
 order_blueprint.route('/<int:order_id>', methods=['GET'])(find_by_id)
-order_blueprint.route('/customer/<int:customer_id>', methods=['GET'])(find_by_customer_id)
-order_blueprint.route('/customer-email', methods=["POST"])(find_by_email)
+# order_blueprint.route('/customer/<int:customer_id>', methods=['GET'])(find_by_customer_id)
+# order_blueprint.route('/customer-email', methods=["POST"])(find_by_email)
