# routes/productBP.py
@@ -1,5 +1,5 @@
 from flask import Blueprint
-from controllers.productController import save, find_all, search_product
+from controllers.productController import save, find_all
 
 
 product_blueprint = Blueprint('product_bp', __name__)
@@ -8,4 +8,4 @@ product_blueprint = Blueprint('product_bp', __name__)
 
 product_blueprint.route('/', methods=['POST'])(save) #triggers the save function on POST request to /products
 product_blueprint.route('/', methods=['GET'])(find_all)
-product_blueprint.route('/search', methods=['GET'])(search_product)
+# product_blueprint.route('/search', methods=['GET'])(search_product)
